Efeito Deslizamento (lang português)

--- a/jQuery/version2/package.json
+++ b/jQuery/version2/package.json
@@ -8,8 +8,8 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
-  "dependencies": {
+  "licpt-brse": "ISC",
+  "deppt-brdpt-brcies": {
     "jquery": "^3.3.1"
   }
 }
