--- a/jQuery/version3/package.json
+++ b/jQuery/version3/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "jquery": "^3.3.1"
+    "jquery": "^3.3.1",
+    "jquery-mask-plugin": "^1.14.15"
   }
 }
